# stateless-payments

./: .gitignore  Cargo.toml  readme.md  rollup_state.json
src/: aggregator.rs  client.rs  errors.rs  lib.rs  main.rs  types.rs  zk_test.rs
src/client/: client.rs  utils.rs
src/rollup/: mock_rollup_fs.rs  mock_rollup_memory.rs  mod.rs  rollup_state.rs  traits.rs
src/server/: connection.rs  constants.rs  mod.rs  server.rs  server_state.rs  utils.rs  ws_message.rs
src/types/: balance.rs  common.rs  mod.rs  public_key.rs  signatures.rs  transaction.rs
src/utils/: hashing.rs  mod.rs  transaction.rs
src/wallet/: constants.rs  mod.rs  utils.rs  wallet.rs
src/websocket/: mod.rs  transport.rs  ws_message.rs
src/websocket/client/: client.rs  mod.rs
src/websocket/server/: connection.rs  mod.rs  server.rs  server_state.rs
src/websocket/tests/: mod.rs  test_end_to_end.rs
tests/: test_aggregator_wallet_flow.rs  test_end_to_end.rs
